--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "mongoose": "^8.1.1",
+    "nodemailer": "^6.9.13",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
