--- a/package.json
+++ b/package.json
@@ -31,13 +31,15 @@
     "@nestjs/throttler": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "firebase-admin": "^12.1.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "mongoose": "^8.1.1",
     "nodemailer": "^6.9.13",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "twilio": "^5.0.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
