--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start:swc": "nest start -b swc -w",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "prune": "docker system prune -a -f --volumes",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -27,10 +28,11 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/swagger": "^7.2.0",
+    "@nestjs/swagger": "^7.3.1",
     "@nestjs/throttler": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "fastify-swagger": "^5.2.0",
     "firebase-admin": "^12.1.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
