--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "start:prod": "node dist/main",
     "prune": "docker system prune -a -f --volumes",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
+    "test": "jest --detectOpenHandles=false",
+    "test:watch": "jest --detectOpenHandles=false --watch",
+    "test:cov": "jest --detectOpenHandles=false --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "up": "docker-compose down && docker-compose up --build"
